# menu_tenant

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  env.example  manage.py  pyproject.toml  test.py
clients/: admin.py  controller.py  models.py  serializers.py  urls.py
clients/migrations/: 0001_initial.py
foods/: admin.py  controller.py  models.py  serializers.py  urls.py
foods/migrations/: 0001_initial.py
menu_tenant/: asgi.py  pagination.py  settings.py  urls.py  urls_api.py  wsgi.py
menu_tenant/middleware/: __init__.py  tenant_middleware.py  timaezone_middaleware.py
menu_tenant/permissions/: __init__.py  permission_access_to_tenant.py  permission_for_register.py
users/: admin.py  apps.py  controller.py  models.py  serializers.py  tasks.py  urls.py
users/migrations/: 0001_initial.py
utils/: models.py
